--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: api_boilerplate_development
+  database: realestate_api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: api_boilerplate_test
+  database: realestate_api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: api_boilerplate_production
-  username: api_boilerplate
+  database: realestate_api_production
+  username: realestate_api
   password: <%= ENV["API_BOILERPLATE_DATABASE_PASSWORD"] %>
