--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Ruby on Rails CI
 on:
   push:
     branches: 
-    - development
+    - main
 
 jobs:
   # Label of the runner job
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2.2
+          ruby-version: 3.1.3
 
       - name: Install dependencies
         run: |
