--- a/.github/workflows/prMain.yml
+++ b/.github/workflows/prMain.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
     branches: 
-    - development
+    - main
 
 jobs:
   # Label of the runner job
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2.2
+          ruby-version: 3.1.3
 
       - name: Install dependencies
         run: |
